--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,13 @@
 title: Jasper Chow # your name (or website title) here
 logo: "/images/logo.png?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  <p align="center">
+  <a href="pdf/resume.pdf">Resume</a> | # <a href="https://linkedin.com">Linkedin</a> |
+  <a href="https://github.com/jchow-ust">GitHub</a>
+  </p>
+  I am an HKUST graduate, BSc Data Science & Computer Science (1st Class Honours) who recently moved from Hong Kong to the UK. My main areas of interest are NLP and reinforcement learning.
   <br><br>
-  Second description 
   <br><br>
-  <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
