--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <a href="https://github.com/jchow-ust">GitHub</a>
   </p>
   <p align="justify">
-  I am an HKUST graduate, BSc Data Science & Computer Science (1st Class Honours) who recently moved from Hong Kong to the UK. My main areas of interest are NLP and reinforcement learning.
+  I recently graduated from the Hong Kong University of Science & Technology (HKUST) with a BSc in Data Science & Computer Science (1st Class Honours) and have recently moved to the UK. My main areas of interest are NLP and reinforcement learning.
   <br><br>
   </p>
   
