--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Jasper Chow # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "/images/logo.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
