--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,7 @@ logo: "/images/logo.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <p align="center">
   <a href="pdf/resume.pdf">Resume</a> |
+  <a href="https://www.linkedin.com/in/jasper-chow-136827245">Linkedin</a> |
   <a href="https://github.com/jchow-ust">GitHub</a>
   </p>
   <p align="justify">
@@ -12,5 +13,3 @@ description: > # your text below (remove <br> elements if you don't need line br
   
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
-
-# <a href="https://linkedin.com">Linkedin</a> |
